# NAVYA-LOCAL-DEV-SERVER

./: .gitignore  FEATURES_GUIDE.md  README.md  audit_five_new.py  benchmark_sites.py  chat.html  chat_debug.html  pyproject.toml  render.yaml  requirements.txt  test_import.py  validate_connections.py  validate_mesh.py
knowledge_base/: STRUCTURE.md  audit_history.json
knowledge_base/engineering/: cross_project_audit_2026_04_30.md
knowledge_base/entities/: 01_projects.md
services/audit-engine/: package-lock.json  package.json  server.js
services/audit-engine/src/: audit-playwright.js  db.js  llm.js  metadata.js  retry.js
services/inference-engine/: main.py
services/testing-mesh/: main.py
services/testing_mesh/: __init__.py  main.py
